--- a/sinuo_summary.ipynb
+++ b/sinuo_summary.ipynb
@@ -656,62 +656,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### The code below shows the concept vocabulary of cui2vec word embedding, which indicates cui2vec covers less than GloVe for our KB."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "def build_med_embedding_dict():\n",
-    "    med_final_dict_path = 'med_final_dict.pkl'\n",
-    "    if os.path.isfile(med_final_dict_path):\n",
-    "        with open(med_final_dict_path, 'rb') as kb_pickled:\n",
-    "            embedding_vector = pickle.load(kb_pickled)\n",
-    "    else:\n",
-    "        WV_PATH = 'cui2vec_pretrained.csv'\n",
-    "        embedding_vector = {}\n",
-    "        df = pd.read_csv(WV_PATH)\n",
-    "        dim_cols = ['V'+str(i) for i in range(1,501)]\n",
-    "        df.columns = ['cui']+dim_cols\n",
-    "        df['vec'] = df[dim_cols].values.tolist()\n",
-    "        df.drop(columns=dim_cols, inplace=True)\n",
-    "        for cid,wv in zip(df['cui'],df['vec']):\n",
-    "            embedding_vector.update({cid:np.array(wv)})\n",
-    "\n",
-    "        print('Loaded %s word vectors.' % len(embedding_vector))\n",
-    "        with open(med_final_dict_path,'wb') as f_pickled:\n",
-    "            pickle.dump(embedding_vector,f_pickled)\n",
-    "            print('med_final_dict saved successfully!')\n",
-    "\n",
-    "    return embedding_vector\n",
-    "\n",
-    "med_dict = build_med_embedding_dict()\n",
-    "print(f'The number of concept unique identifier in cui2vec is: {len(med_dict)}')\n",
-    "\n",
-    "\n",
-    "def check_med_available_percentage(med_dict,KB):\n",
-    "    all_cui_kb = [ent_dict['cid'].strip() for ent_dict in KB['entities'].values() if isinstance(ent_dict,dict)]\n",
-    "    num_ent_exist = 0\n",
-    "    for concept in all_cui_kb:\n",
-    "        if concept in med_dict.keys():\n",
-    "            num_ent_exist += 1\n",
-    "    percent = num_ent_exist/len(all_cui_kb)\n",
-    "    print(f\"There are {len(all_cui_kb)} entity cui exist in the KB, and {num_ent_exist} concpets in KB are available in cui2vec embedding ({round(percent*100,2)}% entities availabel in cui2vec)\")\n",
-    "    return\n",
-    "check_med_available_percentage(med_dict,KB)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "2. Due to the lack of coverage of medical terminologies in GloVe embedding, I am going to use both TF-IDF and pre-trained GloVe word embeddings in my IR system. By combining these two scores, the retrival performance can be more robust, especially in the cases of out-of-vocabulary in GloVe. The detailed implementation of my IR system as follows:\n",
     "\n",
     "- query pre-processing:\n",
@@ -1209,27 +1153,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "len body:  33442\n",
       "len: : 546\n",
-      "33442\n",
-      "In this section, we provide an overview of South Africa’s demographics as a framework to assess the curriculum recovery plan. Next, we describe the context to which the South African curriculum recovery plan applies. To counteract these difficulties, quintile 1 schools receive more per-capita funding from the state than quintile 5 schools. Wealthy schools have continued to provide learning opportunities for students by preparing take-home learning materials for them, for home-schooling. It is clear that excising aspects of the curriculum is at the discretion of schools. Clearly, this complex relationship—of teachers’ insufficient content knowledge, inadequate curriculum coverage, and unfavorable learner performance—persists. Curriculum reorganisation involves reorganisation and refocusing of the curriculum to make the content more manageable. The aim of curriculum reorganization is to manage content by repackaging and integrating subjects to reduce content overload. This complex content would require highly skilled teachers with deep insights in and aptitudes for curriculum design, selection, and hybridization. To disrupt the cycle of impoverished teaching and learning, teachers would have to possess advanced pedagogical and content knowledge to ensure that complex content is taught and learned effectively. As public intellectuals, curriculum decision-makers should be mindful of the contexts and constraints surrounding curriculum making. The curriculum recovery plan is explicit about what needs to be recouped: time and curriculum coverage. A crisis in education requiring urgent curriculum reform is not a new phenomenon. Two options are available to curriculum designers: curriculum change and curriculum continuity (Jansen 1990). It is by portraying the curriculum as an expression of the political interests, knowledge, and values of a dominant force that one has persuasive insights into curriculum predicaments and into new developments in curriculum reform (Jansen 1990). On the bright side, Covid-19 has forced curriculum makers to critically reevaluate each subject in the school curriculum, though they may delay action until after the crisis subsides. On the upside, the revision of the DBE policy forced curriculum makers to evaluate the curriculum critically. The policy’s revisions—those of curriculum trimming and curriculum reorganization—give an idea of how to begin to negate inequalities. Because most teachers do not have curriculum decision-making experience or capacity, the role of a school principal as curriculum leader becomes crucial. Successful curriculum revision will also require changes in the criteria for appointing school leaders. In his words, “Knowledge of the powerful is defined by who gets the knowledge in a society” (2008, p. 14), while powerful knowledge “refers not to the backgrounds of those who have most access to knowledge or who give it legitimacy” but “to what the knowledge can do or what intellectual power it gives to those who have access to it” (Young 2008, p. 14). In other words, individuals from poor socioeconomic backgrounds need not lead a life of permanent existence on the margins—curriculum revisioning that is planned around the notion of “powerful knowledge” can reduce knowledge and socioeconomic inequalities. Accessing powerful knowledge is a fundamental right for all students and not a privilege for the children of the elite; the knowledge that is not available at home is the knowledge that should be acquired at school (Young 2008). Accessing powerful knowledge is about giving all learners from poorer schools, through curriculum revision, access to trustworthy knowledge of the world and opportunities to succeed in school and thereafter.\n"
+      "scores_abstractive:  [{'rouge-1': {'r': 0.2716049382716049, 'p': 0.07719298245614035, 'f': 0.12021857578831865}, 'rouge-2': {'r': 0.05319148936170213, 'p': 0.00998003992015968, 'f': 0.016806720028585975}, 'rouge-l': {'r': 0.25925925925925924, 'p': 0.07368421052631578, 'f': 0.1147540949140017}}]\n",
+      "scores_extractive:  [{'rouge-1': {'r': 0.2716049382716049, 'p': 0.07719298245614035, 'f': 0.12021857578831865}, 'rouge-2': {'r': 0.05319148936170213, 'p': 0.00998003992015968, 'f': 0.016806720028585975}, 'rouge-l': {'r': 0.25925925925925924, 'p': 0.07368421052631578, 'f': 0.1147540949140017}}]\n"
      ]
     }
    ],
    "source": [
+    "# ! pip install rouge\n",
+    "\n",
     "extractor = NLTK_Extractive_Summarizer(summary_length = 5)\n",
     "id = 0\n",
     "text = processed_df.loc[processed_df['paper_id']==id]['original_body_text'].values[0]\n",
+    "target_summ = processed_df.loc[processed_df['paper_id']==id]['abstract'].values[0]\n",
     "# print(text)\n",
     "summ = extractor.summarize(text)\n",
+    "print('len body: ',len(text))\n",
     "print('len: :', len(summ.split()))\n",
-    "print(len(text))\n",
-    "print(summ)"
+    "\n",
+    "from rouge import Rouge\n",
+    "rouge = Rouge()\n",
+    "scores_abstractive = rouge.get_scores(summ, target_summ)\n",
+    "scores_extractive = rouge.get_scores(summ, target_summ)\n",
+    "print('scores_abstractive: ',scores_abstractive)\n",
+    "print('scores_extractive: ',scores_extractive)"
    ],
    "metadata": {
     "collapsed": false
@@ -1352,6 +1306,29 @@
     "body_text = ' '.join(summ.split()[:512])\n",
     "resp = model(body_text, ratio=SUMMARY_RATIO)\n",
     "resp"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scores_abstractive:  [{'rouge-1': {'r': 0.12345679012345678, 'p': 0.18518518518518517, 'f': 0.1481481433481483}, 'rouge-2': {'r': 0.02127659574468085, 'p': 0.03278688524590164, 'f': 0.025806446839543026}, 'rouge-l': {'r': 0.1111111111111111, 'p': 0.16666666666666666, 'f': 0.1333333285333335}}]\n",
+      "scores_extractive:  [{'rouge-1': {'r': 0.12345679012345678, 'p': 0.18518518518518517, 'f': 0.1481481433481483}, 'rouge-2': {'r': 0.02127659574468085, 'p': 0.03278688524590164, 'f': 0.025806446839543026}, 'rouge-l': {'r': 0.1111111111111111, 'p': 0.16666666666666666, 'f': 0.1333333285333335}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores_abstractive = rouge.get_scores(resp, target_summ)\n",
+    "scores_extractive = rouge.get_scores(resp, target_summ)\n",
+    "print('scores_abstractive: ',scores_abstractive)\n",
+    "print('scores_extractive: ',scores_extractive)"
    ],
    "metadata": {
     "collapsed": false
